# WebFinance

./: .gitignore  README.md  manage.py  pyproject.toml
accounts/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: home.html
webfinance/: asgi.py  settings.py  urls.py  wsgi.py
webfinance/templates/: 400.html  403.html  404.html  500.html  base.html  error.html
