[tool.poetry]
name = "webfinance"
version = "0.1.0"
description = "Website for finance ideas."
license = "MIT"
authors = ["Ivan Kyulev <ivandkyulev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
